@@ -20,6 +20,7 @@
 
 package playground.agarwalamit.mixedTraffic.FDTestSetUp;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
@@ -27,11 +28,11 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
 
 import org.apache.log4j.FileAppender;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PatternLayout;
+import org.jfree.util.Log;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.network.Link;
@@ -39,8 +40,11 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.contrib.otfvis.OTFVis;
 import org.matsim.core.api.experimental.events.EventsManager;
 import org.matsim.core.config.ConfigUtils;
+import org.matsim.core.config.groups.QSimConfigGroup.LinkDynamics;
+import org.matsim.core.config.groups.QSimConfigGroup.TrafficDynamics;
 import org.matsim.core.events.EventsUtils;
 import org.matsim.core.events.algorithms.EventWriterXML;
+import org.matsim.core.gbl.MatsimRandom;
 import org.matsim.core.mobsim.framework.AgentSource;
 import org.matsim.core.mobsim.framework.MobsimAgent;
 import org.matsim.core.mobsim.framework.MobsimDriverAgent;
@@ -50,10 +54,8 @@ import org.matsim.core.mobsim.qsim.changeeventsengine.NetworkChangeEventsEngine;
 import org.matsim.core.mobsim.qsim.interfaces.MobsimVehicle;
 import org.matsim.core.mobsim.qsim.interfaces.Netsim;
 import org.matsim.core.mobsim.qsim.qnetsimengine.QNetsimEngine;
-import org.matsim.core.mobsim.qsim.qnetsimengine.SeepageMobsimfactory.QueueWithBufferType;
-import org.matsim.core.mobsim.qsim.qnetsimengine.SeepageNetworkFactory;
 import org.matsim.core.network.NetworkImpl;
-import org.matsim.core.utils.collections.Tuple;
+import org.matsim.facilities.Facility;
 import org.matsim.vehicles.Vehicle;
 import org.matsim.vehicles.VehicleType;
 import org.matsim.vehicles.VehicleUtils;
@@ -69,193 +71,174 @@ import playground.agarwalamit.mixedTraffic.MixedTrafficVehiclesUtils;
 
 public class GenerateFundamentalDiagramData {
 
-	static final Logger log = Logger.getLogger(GenerateFundamentalDiagramData.class);
+	static final Logger LOG = Logger.getLogger(GenerateFundamentalDiagramData.class);
 
-	//CONFIGURATION: static variables used for aggregating configuration options
-
-	static boolean PASSING_ALLOWED = false;
-	static boolean SEEPAGE_ALLOWED = false;
-	private boolean SEEP_NETWORK_FACTORY = false;
-	private final boolean LIVE_OTFVis = false;
-	static boolean WITH_HOLES = false;
-	boolean WRITE_FD_DATA = true;
-	static String RUN_DIR ;
-	public boolean isPlottingDistribution = false;
-
-	static boolean writeInputFiles = true; // includes config,network and plans
-
-	static String[] TRAVELMODES;	//identification of the different modes
-	static Double[] MODAL_SPLIT; //modal split in PCU 
+	private String runDir ;
+	private boolean isDumpingInputFiles = true; // includes config, network
+	private boolean isWritingEventsFileForEachIteration = false;
+	
+	private String[] travelModes;	
+	private Double[] modalSplitInPCU;
+	
+	private boolean isUsingLiveOTFVis = false;
+	private boolean isPlottingDistribution = false;
 
 	private int reduceDataPointsByFactor = 1;
 
 	private int flowUnstableWarnCount [] ;
 	private int speedUnstableWarnCount [] ;
 
-	private static InputsForFDTestSetUp inputs;
+	private InputsForFDTestSetUp inputs;
 	private PrintStream writer;
 	private Scenario scenario;
 
 	static GlobalFlowDynamicsUpdator globalFlowDynamicsUpdator;
-	static PassingEventsUpdator passingEventsUpdator;
+	private PassingEventsUpdator passingEventsUpdator;
 	private Map<Id<VehicleType>, TravelModesFlowDynamicsUpdator> mode2FlowData;
+	private final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
 
-	private Integer[] STARTING_POINT;
-	private Integer [] MAX_AGENT_DISTRIBUTION;
-	private Integer [] Step_Size;
-
-	/**
-	 * Overall density to vehicular flow and speed.
-	 */
-	private Map<Double, Map<String, Tuple<Double, Double>>> outData = new HashMap<Double, Map<String,Tuple<Double,Double>>>();
-	public static String HOLE_SPEED = "15";
+	private Integer[] startingPoint;
+	private Integer [] maxAgentDistribution;
+	private Integer [] stepSize;
+	
+	
+	public GenerateFundamentalDiagramData (final InputsForFDTestSetUp inputs){
+		this.inputs = inputs;
+		this.inputs.run();
+		scenario = this.inputs.getScenario();
+	}
 
 	public static void main(String[] args) {
-
-		String RUN_DIR = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run312";
-
-		String OUTPUT_FOLDER ="/carBikePassing/";
-		// seepageAllowed, runDir, useHoles, useModifiedNetworkFactory, hole speed, distribution
-
-		String [] travelModes= {"car","bike"};
-		Double [] modalSplit = {1.,1.}; // in pcu
-
-		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData();
-
-		generateFDData.setTravelModes(travelModes);
-		generateFDData.setModalSplit(modalSplit);
-		generateFDData.setPassingAllowed(true);
-		generateFDData.setSeepageAllowed(false);
-		generateFDData.setIsWritingFinalFdData(true);
-		generateFDData.setWriteInputFiles(true);
-		generateFDData.setRunDirectory(RUN_DIR+OUTPUT_FOLDER);
-		generateFDData.setUseHoles(false);
-		generateFDData.setReduceDataPointsByFactor(10);
-		generateFDData.setUsingSeepNetworkFactory(false);
-		//		HOLE_SPEED = args[4];
-		generateFDData.setIsPlottingDistribution(false);
+		
+		boolean isRunningOnCluster = false;
+		
+		if (args.length  > 0) isRunningOnCluster = true;
+		
+		if( ! isRunningOnCluster ) {
+			
+			args = new String [8];
+			
+			String myDir = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run313/singleModes/holes/car_SW/";
+			String outFolder ="/car/";
+			
+			args[0] = myDir + outFolder ;
+			args[1] = "car"; // travel (main) modes
+			args[2] = "5.0"; // modal split in pcu
+			args[3] = TrafficDynamics.queue.toString(); // isUsingHoles
+			args[4] = LinkDynamics.FIFO.toString(); // isPassingAllowed
+			args[5] = "1"; // reduce number of data points by this factor
+			args[6] = "false"; // is plotting modal split distribution
+		}
+		
+		InputsForFDTestSetUp inputs = new InputsForFDTestSetUp();
+		inputs.setTravelModes(args[1].split(","));
+		inputs.setModalSplit(args[2].split(",")); //in pcu
+		inputs.setTrafficDynamics(TrafficDynamics.valueOf( args[3]));
+		inputs.setLinkDynamics(LinkDynamics.valueOf( args[4]));
+		
+		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData(inputs);
+		generateFDData.setRunDirectory(args[0]);
+		generateFDData.setReduceDataPointsByFactor(Integer.valueOf(args[5]));
+		generateFDData.setIsPlottingDistribution(Boolean.valueOf(args[6]));
+		generateFDData.setIsUsingLiveOTFVis(false);
+		generateFDData.setIsWritingEventsFileForEachIteration(false);
 		generateFDData.run();
-
 	}
 
 	private void consistencyCheckAndInitialize(){
-		if(writeInputFiles) {
+		if(isDumpingInputFiles) {
 			createLogFile();
 		}
 
-		if (TRAVELMODES.length != MODAL_SPLIT.length){
-			throw new RuntimeException("Modal split for each travel mode is necessray parameter, it is not defined correctly. Check your static variable!!! \n Aborting ...");
+		if(isDumpingInputFiles && runDir==null) throw new RuntimeException("Config, nework and plan file can not be written without a directory location.");
+		if(runDir==null) throw new RuntimeException("Location to write data for FD is not set. Aborting...");
+		
+		if(reduceDataPointsByFactor != 1) {
+			LOG.info("===============");
+			LOG.warn("Number of modes for each mode type in FD will be reduced by a factor of "+reduceDataPointsByFactor+". "+
+					"Make sure this is what you want because it will be more likely to have less or no points in congested regime in absence of queue model with holes.");
+			LOG.info("===============");
 		}
-
-		if(PASSING_ALLOWED) log.info("=======Passing is allowed.========");
-		if(SEEPAGE_ALLOWED) log.info("=======Seepage is allowed.========");
-		if(WITH_HOLES) log.info("======= Using double ended queue.=======");
-
-		if(writeInputFiles && RUN_DIR==null) throw new RuntimeException("Config, nework and plan file can not be written without a directory location.");
-		if(WRITE_FD_DATA && RUN_DIR==null) throw new RuntimeException("Location to write data for FD is not set. Aborting...");
-
-		flowUnstableWarnCount = new int [TRAVELMODES.length];
-		speedUnstableWarnCount = new int [TRAVELMODES.length];
+		
+		if(isWritingEventsFileForEachIteration) Log.warn("This will write one event file corresponding to each iteration and thus ");
 	}
 
-	/**
-	 * @param outputFile final data will be written to this file
-	 */
 	public void run(){
-
 		consistencyCheckAndInitialize();
-
-		inputs = new InputsForFDTestSetUp();
-		inputs.run();
-		scenario = inputs.getScenario();
+		travelModes = inputs.getTravelModes();
+		modalSplitInPCU = inputs.getModalSplit();
+		if(isDumpingInputFiles) inputs.dumpInputFiles(runDir);
 
 		mode2FlowData = inputs.getTravelMode2FlowDynamicsData();
+		flowUnstableWarnCount = new int [travelModes.length];
+		speedUnstableWarnCount = new int [travelModes.length];
 
-		if(WRITE_FD_DATA) openFileAndWriteHeader(RUN_DIR+"/data.txt");
+		openFileAndWriteHeader(runDir+"/data.txt");
 
 		if(isPlottingDistribution){
 			parametricRunAccordingToDistribution();	
 		} else parametricRunAccordingToGivenModalSplit();
 
-		if(WRITE_FD_DATA) closeFile();
+		closeFile();
 	}
 
 	public void setRunDirectory(String runDir) {
-		RUN_DIR = runDir;
+		this.runDir = runDir;
 	}
-
-	public void setPassingAllowed(boolean isPassingAllowed) {
-		PASSING_ALLOWED = isPassingAllowed;
-	}
-
-	public void setSeepageAllowed(boolean isSeepageAllowed) {
-		SEEPAGE_ALLOWED = isSeepageAllowed;
-	}
-
-	public void setWriteInputFiles(boolean writeInputFiles) {
-		GenerateFundamentalDiagramData.writeInputFiles = writeInputFiles;
-	}
-
-	public void setTravelModes(String[] travelModes) {
-		TRAVELMODES = travelModes;
-	}
-
-	public void setModalSplit(Double[] modalSplit) {
-		MODAL_SPLIT = modalSplit;
-	}
-
+	
 	public void setReduceDataPointsByFactor(int reduceDataPointsByFactor) {
 		this.reduceDataPointsByFactor = reduceDataPointsByFactor;
-	}
-
-	public void setUseHoles(boolean isUsingHole) {
-		WITH_HOLES = isUsingHole;
-	}
-
-	private void setUsingSeepNetworkFactory(boolean isUsingMySeepNetworkFactory){
-		SEEP_NETWORK_FACTORY = isUsingMySeepNetworkFactory;
 	}
 
 	public void setIsPlottingDistribution(boolean isPlottingDistribution) {
 		this.isPlottingDistribution = isPlottingDistribution;
 	}
 
-	public Map<Double, Map<String, Tuple<Double, Double>>> getOutData() {
-		return outData;
+	public void setIsUsingLiveOTFVis(boolean liveOTFVis) {
+		this.isUsingLiveOTFVis = liveOTFVis;
 	}
 
-	public void setIsWritingFinalFdData(boolean isWritingFinalData) {
-		WRITE_FD_DATA = isWritingFinalData;
+	public void setIsWritingEventsFileForEachIteration(
+			boolean isWritingEventsFileForEachIteration) {
+		this.isWritingEventsFileForEachIteration = isWritingEventsFileForEachIteration;
+	}
+	
+	public void setIsDumpingInputFiles(boolean isDumpingInputFiles){
+		this.isDumpingInputFiles = isDumpingInputFiles;
+	}
+	
+	public Scenario getScenario() {
+		return scenario;
 	}
 
 	private void parametricRunAccordingToGivenModalSplit(){
 
-		//		Creating minimal configuration respecting modal split in PCU and integer agent numbers
+		//	Creating minimal configuration respecting modal split in PCU and integer agent numbers
 		List<Double> pcus = new ArrayList<Double>();
-		for(int index =0 ;index<TRAVELMODES.length;index++){
-			double tempPCU = MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+		for(int index =0 ;index<travelModes.length;index++){
+			double tempPCU = MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 			pcus.add(tempPCU);
 		}
 
 		List<Integer> minSteps = new ArrayList<Integer>();
-		for (double modalSplit : Arrays.asList(MODAL_SPLIT)){
-			minSteps.add(new Integer((int) (modalSplit*100)));
+		for (double modalSplit : Arrays.asList(modalSplitInPCU)){
+			minSteps.add(Integer.valueOf( (int) modalSplit*100) ) ;
 		}
 
 		int commonMultiplier = 1;
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			double pcu = pcus.get(i);
 			//heavy vehicles
-			if ((pcu>1) && ((minSteps.get(i))%pcu != 0)){
+			if ( (pcu>1) && (minSteps.get(i)%pcu != 0) ){
 				double lcm = getLCM((int) pcu, minSteps.get(i));
 				commonMultiplier *= lcm/minSteps.get(i);
 			}
 		}
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, (int) (minSteps.get(i)*commonMultiplier/pcus.get(i)));
 		}
 		int pgcd = getGCDOfList(minSteps);
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, minSteps.get(i)/pgcd);
 		}
 
@@ -263,62 +246,61 @@ public class GenerateFundamentalDiagramData {
 			minSteps.set(0, 1);
 		}
 
-		// for a faster simulation or to have less points on FD, minSteps is increased
 		if(reduceDataPointsByFactor!=1) {
-			log.info("===============");
-			log.warn("Data points for FD will be reduced by a factor of "+reduceDataPointsByFactor+". "+
-					"Make sure this is what you want because it will be more likely to have less or no points in congested regime.");
-			log.info("===============");
 			for(int index=0;index<minSteps.size();index++){
 				minSteps.set(index, minSteps.get(index)*reduceDataPointsByFactor);
 			}
 		}
+		
 		//set up number of Points to run.
 		double cellSizePerPCU = ((NetworkImpl) scenario.getNetwork()).getEffectiveCellSize();
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 		double sumOfPCUInEachStep = 0;
-		for(int index=0;index<TRAVELMODES.length;index++){
-			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+	
+		for(int index=0;index<travelModes.length;index++){
+			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 		}
 		int numberOfPoints = (int) Math.ceil(networkDensity/sumOfPCUInEachStep) +5;
 
 		List<List<Integer>> pointsToRun = new ArrayList<List<Integer>>();
 		for (int m=1; m<numberOfPoints; m++){
 			List<Integer> pointToRun = new ArrayList<Integer>();
-			for (int i=0; i<GenerateFundamentalDiagramData.TRAVELMODES.length; i++){
+			for (int i=0; i<travelModes.length; i++){
 				pointToRun.add(minSteps.get(i)*m);
 			}
-			log.info("Number of Agents - \t"+pointToRun);
+			LOG.info("Number of Agents - \t"+pointToRun);
 			pointsToRun.add(pointToRun);
 		}
 
-		//Effective iteration over all points 
 		for ( int i=0; i<pointsToRun.size(); i++){
 			List<Integer> pointToRun = pointsToRun.get(i);
-			log.info("Going into run where number of Agents are - \t"+pointToRun);
+			LOG.info("===============");
+			LOG.info("Going into run where number of Agents are - \t"+pointToRun);
+			Log.info("Further, " + (pointsToRun.size() - i) +" combinations will be simulated.");
+			LOG.info("===============");
 			this.singleRun(pointToRun);
 		}
 	}
 
 	private void parametricRunAccordingToDistribution(){
 
-		this.STARTING_POINT = new Integer [TRAVELMODES.length];
-		this.Step_Size = new Integer [TRAVELMODES.length];
+		this.startingPoint = new Integer [travelModes.length];
+		this.stepSize = new Integer [travelModes.length];
 
-		for(int ii=0;ii<TRAVELMODES.length;ii++){
-			this.STARTING_POINT [ii] =0;
-			this.Step_Size [ii] = this.reduceDataPointsByFactor*1;
+		for(int ii=0;ii<travelModes.length;ii++){
+			this.startingPoint [ii] =0;
+			this.stepSize [ii] = this.reduceDataPointsByFactor*1;
 		}
-		this.STARTING_POINT = new Integer[] {1,1};
+		this.startingPoint = new Integer[] {1,1};
 
-		MAX_AGENT_DISTRIBUTION = new Integer [TRAVELMODES.length];
+		maxAgentDistribution = new Integer [travelModes.length];
 		double cellSizePerPCU = ((NetworkImpl) this.scenario.getNetwork()).getEffectiveCellSize();
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 
-		for(int ii=0;ii<MAX_AGENT_DISTRIBUTION.length;ii++){
-			double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
+		for(int ii=0;ii<maxAgentDistribution.length;ii++){
+			double pcu = this.mode2FlowData.get(Id.create(travelModes[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
 			int maxNumberOfVehicle = (int) Math.floor(networkDensity/pcu)+1;
-			MAX_AGENT_DISTRIBUTION[ii] = maxNumberOfVehicle;
+			maxAgentDistribution[ii] = maxNumberOfVehicle;
 		}
 
 		List<List<Integer>> pointsToRun = this.createPointsToRun();
@@ -326,13 +308,13 @@ public class GenerateFundamentalDiagramData {
 		for ( int i=0; i<pointsToRun.size(); i++){
 			List<Integer> pointToRun = pointsToRun.get(i);
 			double density =0;
-			for(int jj = 0; jj < TRAVELMODES.length;jj++ ){
-				double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
+			for(int jj = 0; jj < travelModes.length;jj++ ){
+				double pcu = this.mode2FlowData.get(Id.create(travelModes[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
 				density += pcu *pointToRun.get(jj) ;
 			}
 
 			if(density <= networkDensity+5){
-				System.out.println("Going into run "+pointToRun);
+				LOG.info("Going into run "+pointToRun);
 				this.singleRun(pointToRun);
 			} 
 		}
@@ -342,43 +324,40 @@ public class GenerateFundamentalDiagramData {
 
 		int numberOfPoints = 1; 
 
-		for(int jj=0;jj<TRAVELMODES.length;jj++){
-			numberOfPoints *= (int) Math.floor((MAX_AGENT_DISTRIBUTION[jj]-STARTING_POINT[jj])/Step_Size[jj])+1;
+		for(int jj=0;jj<travelModes.length;jj++){
+			numberOfPoints *= (int) Math.floor((maxAgentDistribution[jj]-startingPoint[jj])/stepSize[jj])+1;
 		}
 
-		if(numberOfPoints > 1000) log.warn("Total number of points to run is "+numberOfPoints+". This may take long time. "
+		if(numberOfPoints > 1000) LOG.warn("Total number of points to run is "+numberOfPoints+". This may take long time. "
 				+ "For lesser time to get the data reduce data points by some factor.");
 
 		//Actually going through the n-dimensional grid
-		BinaryAdditionModule iterationModule = new BinaryAdditionModule(Arrays.asList(MAX_AGENT_DISTRIBUTION), Arrays.asList(Step_Size), STARTING_POINT);
+		BinaryAdditionModule iterationModule = new BinaryAdditionModule(Arrays.asList(maxAgentDistribution), Arrays.asList(stepSize), startingPoint);
 		List<List<Integer>> pointsToRun = new ArrayList<List<Integer>>();
 		for (int i=0; i<numberOfPoints; i++){
-			Integer[] newPoint = new Integer[MAX_AGENT_DISTRIBUTION.length];
+			Integer[] newPoint = new Integer[maxAgentDistribution.length];
 			for (int j=0; j<newPoint.length; j++){
-				newPoint[j] = (iterationModule.getPoint())[j];
+				newPoint[j] = iterationModule.getPoint()[j];
 			}
 			pointsToRun.add(Arrays.asList(newPoint));
-			String point = Arraytostring(iterationModule.getPoint());
-			log.info("Just added point "+point+" to the collection.");
+			String point = arraytostring(iterationModule.getPoint());
+			LOG.info("Just added point "+point+" to the collection.");
 			if (i<numberOfPoints-1){
 				iterationModule.add1();
 			}
 		}
-		//System.out.println(pointsToRun.size());
 		return pointsToRun;
 	}
 
 	private void singleRun(List<Integer> pointToRun) {
-		
 		person2Mode.clear();
-		
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			for (int ii = 0; ii < pointToRun.get(i); ii++){
 				Id<Person> personId = Id.createPersonId(person2Mode.size());
-				person2Mode.put(personId,TRAVELMODES[i]);
+				person2Mode.put(personId,travelModes[i]);
 			}
 			
-			this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
+			this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
 		}
 
 		EventsManager events = EventsUtils.createEventsManager();
@@ -387,10 +366,17 @@ public class GenerateFundamentalDiagramData {
 		passingEventsUpdator  = new PassingEventsUpdator();
 
 		events.addHandler(globalFlowDynamicsUpdator);
-		events.addHandler(passingEventsUpdator);
+		
+		if(travelModes.length > 1)	events.addHandler(passingEventsUpdator);
 
-		EventWriterXML eventWriter = new EventWriterXML(RUN_DIR+"/events.xml");
-		if(writeInputFiles){
+		EventWriterXML eventWriter = null;
+		
+		if(isWritingEventsFileForEachIteration){
+			String eventsDir = runDir+"/events/";
+			
+			if (! new File(eventsDir).exists() ) new File(eventsDir).mkdir();
+			
+			eventWriter = new EventWriterXML(eventsDir+"/events"+pointToRun.toString()+".xml");
 			events.addHandler(eventWriter);
 		}
 
@@ -399,14 +385,14 @@ public class GenerateFundamentalDiagramData {
 		qSim.run();
 
 		boolean stableState = true;
-		for(int index=0;index<TRAVELMODES.length;index++){
-			Id<VehicleType> veh = Id.create(TRAVELMODES[index], VehicleType.class);
+		for(int index=0;index<travelModes.length;index++){
+			Id<VehicleType> veh = Id.create(travelModes[index], VehicleType.class);
 			if(!mode2FlowData.get(veh).isFlowStable()) 
 			{
 				stableState = false;
 				int existingCount = flowUnstableWarnCount[index]; existingCount++;
 				flowUnstableWarnCount[index] = existingCount;
-				log.warn("Flow stability is not reached for travel mode "+veh.toString()
+				LOG.warn("Flow stability is not reached for travel mode "+veh.toString()
 						+" and simulation end time is reached. Output data sheet will have all zeros for such runs."
 						+ "This is " + flowUnstableWarnCount[index]+ "th warning.");
 				//				log.warn("Increasing simulation time could be a possible solution to avoid it.");
@@ -416,7 +402,7 @@ public class GenerateFundamentalDiagramData {
 				stableState = false;
 				int existingCount = speedUnstableWarnCount[index]; existingCount++;
 				speedUnstableWarnCount[index] = existingCount;
-				log.warn("Speed stability is not reached for travel mode "+veh.toString()
+				LOG.warn("Speed stability is not reached for travel mode "+veh.toString()
 						+" and simulation end time is reached. Output data sheet will have all zeros for such runs."
 						+ "This is " + speedUnstableWarnCount[index]+ "th warning.");
 			}
@@ -432,71 +418,55 @@ public class GenerateFundamentalDiagramData {
 			if(globalLinkDensity > networkDensity/3+10) stableState =false; //+10; since we still need some points at max density to show zero speed.
 		}
 
-		if(WRITE_FD_DATA && stableState) {
+		if( stableState ) {
 			writer.format("%d\t",globalFlowDynamicsUpdator.getGlobalData().numberOfAgents);
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%d\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).numberOfAgents);
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%d\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).numberOfAgents);
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentDensity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentDensity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentDensity());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentFlow());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentFlow());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentFlow());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentAverageVelocity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentAverageVelocity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentAverageVelocity());
 			}
-			writer.format("%.2f\t", passingEventsUpdator.getNoOfCarsPerKm());
+			
+			if( travelModes.length > 1 ) {
 
-			writer.format("%.2f\t", passingEventsUpdator.getTotalBikesPassedByAllCarsPerKm());
+				writer.format("%.2f\t", passingEventsUpdator.getNoOfCarsPerKm());
 
-			writer.format("%.2f\t", passingEventsUpdator.getAvgBikesPassingRate());
+				writer.format("%.2f\t", passingEventsUpdator.getTotalBikesPassedByAllCarsPerKm());
+
+				writer.format("%.2f\t", passingEventsUpdator.getAvgBikesPassingRate());
+			}
+			
 			writer.print("\n");
 		}
-		//storing data in map
-		Map<String, Tuple<Double, Double>> mode2FlowSpeed = new HashMap<String, Tuple<Double,Double>>();
-		for(int i=0; i < TRAVELMODES.length; i++){
 
-			Tuple<Double, Double> flowSpeed = 
-					new Tuple<Double, Double>(this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentFlow(),
-							this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentAverageVelocity());
-			mode2FlowSpeed.put(TRAVELMODES[i], flowSpeed);
-			outData.put(globalFlowDynamicsUpdator.getGlobalData().getPermanentDensity(), mode2FlowSpeed);
-		}
-
-		if(writeInputFiles) eventWriter.closeFile();
+		if(isWritingEventsFileForEachIteration) eventWriter.closeFile();
 	}
-
-	static final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
-
+	
 	private Netsim createModifiedQSim(Scenario sc, EventsManager events) {
 		final QSim qSim = new QSim(sc, events);
 		ActivityEngine activityEngine = new ActivityEngine(events, qSim.getAgentCounter());
 		qSim.addMobsimEngine(activityEngine);
 		qSim.addActivityHandler(activityEngine);
 
-		QNetsimEngine netsimEngine ;
-
-		if(SEEP_NETWORK_FACTORY){
-			log.warn("Using modified \"QueueWithBuffer\". Keep eyes open.");
-			SeepageNetworkFactory seepNetFactory = new SeepageNetworkFactory(QueueWithBufferType.amit);
-			netsimEngine = new QNetsimEngine(qSim,seepNetFactory);
-		} else {
-			netsimEngine = new QNetsimEngine(qSim);
-		}
+		QNetsimEngine netsimEngine  = new QNetsimEngine(qSim);
 
 		qSim.addMobsimEngine(netsimEngine);
 		qSim.addDepartureHandler(netsimEngine.getDepartureHandler());
 
-		log.info("=======================");
-		log.info("Modifying AgentSource by modifying mobsim agents' next link so that, "
-				+ "agents keep moving on the track.");
-		log.info("=======================");
+		LOG.info("=======================");
+		LOG.info("Mobsim agents' are directly added to AgentSource.");
+		LOG.info("=======================");
 
-		if (sc.getConfig().network().isTimeVariantNetwork()) {
+		if (this.inputs.isTimeDependentNetwork()) {
 			qSim.addMobsimEngine(new NetworkChangeEventsEngine());		
 		}
 
@@ -511,11 +481,12 @@ public class GenerateFundamentalDiagramData {
 
 			@Override
 			public void insertAgentsIntoMobsim() {
-
+				
 				for ( Id<Person> personId : person2Mode.keySet()) {
 					String travelMode = person2Mode.get(personId);
-					double actEndTime = (new Random().nextDouble())*900;
-
+					double randDouble = MatsimRandom.getRandom().nextDouble();
+					double actEndTime = randDouble*InputsForFDTestSetUp.MAX_ACT_END_TIME;
+					
 					MobsimAgent agent = new MySimplifiedRoundAndRoundAgent(personId, actEndTime, travelMode);
 					qSim.insertAgentIntoMobsim(agent);
 
@@ -528,7 +499,7 @@ public class GenerateFundamentalDiagramData {
 
 		qSim.addAgentSource(agentSource);
 
-		if ( LIVE_OTFVis ) {
+		if ( isUsingLiveOTFVis ) {
 			// otfvis configuration.  There is more you can do here than via file!
 			final OTFVisConfigGroup otfVisConfig = ConfigUtils.addOrGetModule(qSim.getScenario().getConfig(), OTFVisConfigGroup.GROUP_NAME, OTFVisConfigGroup.class);
 			otfVisConfig.setDrawTransitFacilities(false) ; // this DOES work
@@ -548,34 +519,37 @@ public class GenerateFundamentalDiagramData {
 			throw new RuntimeException(e);
 		}
 		writer.print("n \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strn = "n_"+str;
 			writer.print(strn+"\t");
 		}
 		writer.print("k \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strk = "k_"+str;
 			writer.print(strk+"\t");
 		}
 		writer.print("q \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strq = "q_"+str;
 			writer.print(strq+"\t");
 		}
 		writer.print("v \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strv = "v_"+str;
 			writer.print(strv+"\t");
 		}
-		writer.print("noOfCarsPerkm \t");
+		
+		if( travelModes.length > 1 ) {
+			writer.print("noOfCarsPerkm \t");
 
-		writer.print("totalBikesPassedByAllCarsPerKm \t");
+			writer.print("totalBikesPassedByAllCarsPerKm \t");
 
-		writer.print("avgBikePassingRatePerkm \t");
+			writer.print("avgBikePassingRatePerkm \t");
+		}
 
 		writer.print("\n");
 	}
@@ -584,7 +558,7 @@ public class GenerateFundamentalDiagramData {
 		writer.close();
 	}
 
-	private static String Arraytostring(Integer[] list){
+	private static String arraytostring(Integer[] list){
 		int n = list.length;
 		String str = "";
 		for (int i=0; i<n; i++){
@@ -621,29 +595,38 @@ public class GenerateFundamentalDiagramData {
 		layout.setConversionPattern(conversionPattern);
 		FileAppender appender;
 		try {
-			appender = new FileAppender(layout, RUN_DIR+"/logfile.log",false);
+			appender = new FileAppender(layout, runDir+"/logfile.log",false);
 		} catch (IOException e1) {
 			throw new RuntimeException("File not found.");
 		}
-		log.addAppender(appender);
+		LOG.addAppender(appender);
 	}
 
 	static class MySimplifiedRoundAndRoundAgent implements MobsimAgent, MobsimDriverAgent {
 
-		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
-			personId = agentId;
-			mode = travelMode;
-			this.actEndTime = actEndTime;
-		}
+		private static final Id<Link> FIRST_LINK_ID_OF_MIDDEL_BRANCH_OF_TRACK = Id.createLinkId(InputsForFDTestSetUp.SUBDIVISION_FACTOR);
+		private static final Id<Link> LAST_LINK_ID_OF_BASE = Id.createLinkId(InputsForFDTestSetUp.SUBDIVISION_FACTOR-1);
+		private static final Id<Link> LAST_LINK_ID_OF_TRACK = Id.createLinkId(3*InputsForFDTestSetUp.SUBDIVISION_FACTOR-1);
+		private static final Id<Link> FIRST_LINK_LINK_ID_OF_BASE = Id.createLinkId(0);
+		private static final Id<Link> ORIGIN_LINK_ID = Id.createLinkId("home");
+		private static final Id<Link> DESTINATION_LINK_ID = Id.createLinkId("work");
 
 		private final Id<Person> personId;
+		private final Id<Vehicle> plannedVehicleId;
 		private final String mode;
 		private final double actEndTime;
 
 		private MobsimVehicle vehicle ;
 		public boolean isArriving= false;
+		
+		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
+			personId = agentId;
+			mode = travelMode;
+			this.actEndTime = actEndTime;
+			this.plannedVehicleId = Id.create(agentId, Vehicle.class);
+		}
 
-		private Id<Link> currentLinkId = Id.createLinkId("home");
+		private Id<Link> currentLinkId = ORIGIN_LINK_ID;
 		private State agentState= MobsimAgent.State.ACTIVITY;;
 
 		@Override
@@ -653,7 +636,7 @@ public class GenerateFundamentalDiagramData {
 
 		@Override
 		public Id<Link> getDestinationLinkId() {
-			return Id.createLinkId("work");
+			return DESTINATION_LINK_ID;
 		}
 
 		@Override
@@ -663,24 +646,21 @@ public class GenerateFundamentalDiagramData {
 
 		@Override
 		public Id<Link> chooseNextLinkId() {
-			if (globalFlowDynamicsUpdator.isPermanent()){ 
-				isArriving = true; 
-			}
 
 			if (GenerateFundamentalDiagramData.globalFlowDynamicsUpdator.isPermanent()){ 
 				isArriving = true; 
 			}
 
-			if( this.getCurrentLinkId().equals(Id.createLinkId(3*InputsForFDTestSetUp.SUBDIVISION_FACTOR-1)) || this.currentLinkId.equals(Id.createLinkId("home"))){
+			if( LAST_LINK_ID_OF_TRACK.equals(this.currentLinkId) || ORIGIN_LINK_ID.equals(this.currentLinkId)){
 				//person departing from home OR last link of the track
-				return Id.createLinkId(0);
-			} else if(this.getCurrentLinkId().equals(Id.createLinkId(InputsForFDTestSetUp.SUBDIVISION_FACTOR-1))){ //last link of base
+				return FIRST_LINK_LINK_ID_OF_BASE;
+			} else if(LAST_LINK_ID_OF_BASE.equals(this.currentLinkId)){
 				if ( isArriving) {
-					return Id.createLinkId("work") ;
+					return DESTINATION_LINK_ID ;
 				} else {
-					return Id.createLinkId(InputsForFDTestSetUp.SUBDIVISION_FACTOR) ;
+					return FIRST_LINK_ID_OF_MIDDEL_BRANCH_OF_TRACK ;
 				}
-			}  else if (this.getCurrentLinkId().equals(Id.createLinkId("work"))){
+			}  else if (DESTINATION_LINK_ID.equals(this.currentLinkId)){
 				return null;// this will send agent for arrival
 			} else {
 				Id<Link> existingLInkId = this.currentLinkId;
@@ -714,7 +694,7 @@ public class GenerateFundamentalDiagramData {
 
 		@Override
 		public Id<Vehicle> getPlannedVehicleId() {
-			return Id.create(this.getId(), Vehicle.class);
+			return this.plannedVehicleId;
 		}
 
 		@Override
@@ -724,6 +704,9 @@ public class GenerateFundamentalDiagramData {
 
 		@Override
 		public double getActivityEndTime() {
+			if(isArriving && this.agentState.equals(MobsimAgent.State.ACTIVITY)) {
+				return Double.POSITIVE_INFINITY; // let agent go to sleep.
+			}
 			return this.actEndTime;
 		}
 
@@ -760,6 +743,18 @@ public class GenerateFundamentalDiagramData {
 		@Override
 		public void notifyArrivalOnLinkByNonNetworkMode(Id<Link> linkId) {
 			throw new RuntimeException("not implemented");
+		}
+
+		@Override
+		public Facility<? extends Facility<?>> getCurrentFacility() {
+			// TODO Auto-generated method stub
+			throw new RuntimeException("not implemented") ;
+		}
+
+		@Override
+		public Facility<? extends Facility<?>> getDestinationFacility() {
+			// TODO Auto-generated method stub
+			throw new RuntimeException("not implemented") ;
 		}
 
 	}
